--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
 
-  <a class="button" href="https://smarturl.it/goner-i-got-friends">NEW SONG I got friends</a>
+  <a class="button" href="https://distrokid.com/hyperfollow/liltytanandjakeplus/ugly">NEW SONG "UGLY"</a>
   <a class="button" href="/beats">Beatstore</a>
 
 <!-- Begin Mailchimp Signup Form -->
