--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 <div id="mc_embed_signup">
 <form action="https://gmail.us20.list-manage.com/subscribe/post?u=674b0403b910566f079c93895&amp;id=44eabddc9a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Subscribe to be the first to hear new releases</label>
+	<label for="mce-EMAIL">Join the club, yo</label>
 	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_674b0403b910566f079c93895_44eabddc9a" tabindex="-1" value=""></div>
