--- a/beats.html
+++ b/beats.html
@@ -4,3 +4,57 @@ title: Beatstore
 ---
 
 <iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
+
+<h1>Licensing Options</h1>
+<div>
+    <h3>Non-exclusive licenses. Buy one get one free all orders</h3>
+    <h4>discount is automatically applied when you add two items to cart</h4>
+</div>
+<div class="container pricing-table">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <h4>MP3 Lease</h4>
+                <h3>$29</h3>
+                <ul>
+                    <li>MP3 File</li>
+                    <li>Not Available for Streaming Services with the exception of SoundCloud and YouTube</li>
+                    <li>Must leave tag in intro</li>
+                    <li>Must Credit In Title (Prod. by Jake Plus)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>WAV Lease</h4>
+                <h3>$49</h3>
+                <ul>
+                    <li>MP3 File</li>
+                    <li>WAV File</li>
+                    <li>2,500 Unit Cap</li>
+                    <li>50,000 Stream Cap</li>
+                    <li>Must leave tag in intro</li>
+                    <li>Must Credit In Title (Prod. by Jake Plus)</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Unlimited lease</h4>
+                <h3>$149</h3>
+                <ul>
+                    <li>MP3 File</li>
+                    <li>WAV File</li>
+                    <li>Unlimited Unit Cap</li>
+                    <li>Unlimited Stream Cap</li>
+                    <li>50/50 Split set up through Distrokid</li>
+                    <li>Must leave tag in intro</li>
+                    <li>Must Credit In Title (Prod. by Jake Plus)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<div>
+    <h3>Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> for exclusive licensing/custom work</h3>
+</div>
