--- a/beats.html
+++ b/beats.html
@@ -15,7 +15,7 @@ title: Beatstore
         <div class="col-md-4">
             <div class="card">
                 <h4>MP3 Lease</h4>
-                <h3>$29</h3>
+                <h3><span style="text-decoration: line-through;">$19</span> $29 This week only</h3>
                 <ul>
                     <li>MP3 File</li>
                     <li>Not Available for Streaming Services with the exception of SoundCloud and YouTube</li>
