--- a/beats.html
+++ b/beats.html
@@ -7,8 +7,8 @@ title: Beatstore
 
 <h1>Licensing Options</h1>
 <div>
-    <h3>Non-exclusive licenses. Buy one get one free all orders</h3>
-    <h4>discount is automatically applied when you add two items to cart</h4>
+    <h3>Non-exclusive licenses. Buy one get one free all orders.</h3>
+    <h4>discount is automatically applied when you add two items to cart. All sales are final.</h4>
 </div>
 <div class="container pricing-table">
     <div class="row">
@@ -48,7 +48,7 @@ title: Beatstore
                     <li>WAV File</li>
                     <li>Unlimited Unit Cap</li>
                     <li>Unlimited Stream Cap</li>
-                    <li>50/50 Split set up through Distrokid</li>
+                    <li>50/50 Streaming split set up through Distrokid</li>
                     <li>Must leave tag in intro</li>
                     <li>Must Credit In Title (Prod. by Jake Plus)</li>
                 </ul>
