ud: exclusives page

--- a/exclusives.html
+++ b/exclusives.html
@@ -3,9 +3,10 @@ layout: page
 title: Exclusive Pricing
 ---
 
-<h1>Exclusive Pricing</h1>
-
 <div class="container pricing-table">
+    <div class="row">
+        <h1>Exclusive Pricing</h1>
+    </div>
     <div class="row">
         <div class="col-md-4">
             <div class="card">
@@ -13,13 +14,31 @@ title: Exclusive Pricing
                 <p>Fully produced custom instrumental based on your specs</p>
                 <h3>$400</h3>
                 <ul>
-                    <li>50% mechanical</li>
+                    <li>50/50 split streaming royalties</li>
                     <li>Tag in intro</li>
                     <li>Credit in backend/title (prod. By Jake Plus)</li>
-                    <li>Includes mixing</li>
+                    <li><b>Free vocal mix included</b></li>
                 </ul>
             </div>
         </div>
+        <div class="col-md-4">
+            <div class="card muted">
+                <h4>(for comparison) Unlimited lease</h4>
+                <p>Premade instrumental from my beat catalogue</p>
+                <h3>$199</h3>
+                <ul>
+                    <li>Non-exclusive</li>
+                    <li>Keep 100% streaming</li>
+                    <li>Tag in intro</li>
+                    <li>Credit in backend/title (prod. By Jake Plus)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <h1>Producer-for-hire Pricing (artist collab)</h1>
+    </div>
+    <div class="row">
         <div class="col-md-4">
             <div class="card">
                 <h4>Exclusive Beat (collab)</h4>
@@ -33,17 +52,21 @@ title: Exclusive Pricing
                 </ul>
             </div>
         </div>
-        <div class="col-md-4">
-            <div class="card">
-                <h4>Nonexclusive unlimited lease</h4>
-                <p>(for comparison) Premade instrumental from my beat catalogue</p>
-                <h3>$150</h3>
-                <ul>
-                    <li>50% mechanical</li>
-                    <li>Tag in intro</li>
-                    <li>Credit in backend/title (prod. By Jake Plus)</li>
-                    <li>Does not include mixing</li>
-                </ul>
+    </div>
+    <div class="row">
+        <h1>Film Scoring Pricing</h1>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <h4>Film scoring</h4>
+                    <p>I work with your director/team to discover and devlop the ideal sound for your project</p>
+                    <h3>$300/minute*</h3>
+                    <ul>
+                        <li>*Average price per minute of completed music</li>
+                        <li>negotiable upon budget and/or specific needs of the project</li>
+                        <li>Credit in backend</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
