--- a/exclusives.html
+++ b/exclusives.html
@@ -5,7 +5,7 @@ title: Exclusive Pricing
 
 <div class="container pricing-table">
     <div class="row">
-        <h1>Exclusive Pricing</h1>
+        <h1>Exclusive Beat Pricing</h1>
     </div>
     <div class="row">
         <div class="col-md-4">
@@ -70,4 +70,7 @@ title: Exclusive Pricing
             </div>
         </div>
     </div>
+</div>
+<div>
+    <h3>Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> to get your project started</h3>
 </div>
