--- a/exclusives.html
+++ b/exclusives.html
@@ -59,7 +59,7 @@ title: Exclusive Pricing
             <div class="col-md-4">
                 <div class="card">
                     <h4>Film scoring</h4>
-                    <p>I work with your director/team to discover and devlop the ideal sound for your project</p>
+                    <p>I work with your director/team to discover and develop the ideal sound for your project</p>
                     <h3>$300/minute*</h3>
                     <ul>
                         <li>*Average price per minute of completed music</li>
