ud: exclusives page

--- a/exclusives.html
+++ b/exclusives.html
@@ -14,7 +14,7 @@ title: Exclusive Pricing
                 <p>Fully produced custom instrumental based on your specs</p>
                 <h3>$400</h3>
                 <ul>
-                    <li>50/50 split streaming royalties</li>
+                    <li>Entitled to 50% streaming royalties</li>
                     <li>Tag in intro</li>
                     <li>Credit in backend/title (prod. By Jake Plus)</li>
                     <li><b>Free vocal mix included</b></li>
@@ -45,7 +45,7 @@ title: Exclusive Pricing
                 <p>You already have a song written and recorded and want me to make a beat for it</p>
                 <h3>$400</h3>
                 <ul>
-                    <li>25% mechanical</li>
+                    <li>Entitled to 25% streaming royalties<li>
                     <li>Tag optional</li>
                     <li>Credit in backend/descriptions/social media</li>
                     <li>Includes mixing</li>
