--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
 
-  <a class="button" href="https://distrokid.com/hyperfollow/gonerandjakeplus/i-know-u-know-feat-txcka">PRE-SAVE 'I KNOW U KNOW'</a>
+  <a class="button" href="https://distrokid.com/hyperfollow/gonerandjakeplus/i-know-u-know-feat-txcka">STREAM 'I KNOW U KNOW'</a>
   <a class="button" href="/beats">Beatstore</a>
 
 <!-- Begin Mailchimp Signup Form -->
