--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@ layout: default
 
 <div class="home">
 
-
+  <a class="button" href="https://smarturl.it/jakeplus-inthenight?IQid=website">STREAM 'INTHENIGHT'</a>
   <a class="button" href="https://distrokid.com/hyperfollow/gonerandjakeplus/i-know-u-know-feat-txcka">STREAM 'I KNOW U KNOW'</a>
-  <a class="button" href="/beats">Beatstore</a>
 
 <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
