feat: add services to shop

--- a/beats.html
+++ b/beats.html
@@ -3,9 +3,43 @@ layout: page
 title: Beatstore
 ---
 
-<iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
+<h1>Services</h1>
+<h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a></h3>
+<div class="container pricing-table">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Mixing</h4>
+                <h3>$100</h3>
+                <ul>
+                    <li>Make your vocals sexy</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Mastering</h4>
+                <h3>$50</h3>
+                <ul>
+                    <li>Make it loud asf</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Recording</h4>
+                <h3>$50/hr</h3>
+                <ul>
+                    <li>Studio in downtown Santa Ana</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
-<h1>Licensing Options</h1>
+<br>
+<div style="text-align: center;">
+<h1>Beats</h1>
 <div>
     <h3>Non-exclusive licenses. Buy one get one free all orders.</h3>
     <h4>discount is automatically applied when you add two items to cart. All sales are final.</h4>
@@ -55,5 +89,7 @@ title: Beatstore
     </div>
 </div>
 <div>
-    <h3>Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> for exclusive licensing/custom work</h3>
+    <h3>For exclusives and/or custom beats, contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a></h3>
 </div>
+</div>
+<iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
