--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: default
 <div class="home">
 
   <a class="button" href="https://fanlink.to/Know-Me">STREAM 'KNOW ME'</a>
+  <a class="button" href="/beats">SHOP BEATS/SERVICES</a>
 
 <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
