--- a/beats.html
+++ b/beats.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Beatstore
+title: Beats & Services
 ---
 
 <h1>Services</h1>
@@ -28,7 +28,7 @@ title: Beatstore
         <div class="col-md-4">
             <div class="card">
                 <h4>Recording</h4>
-                <h3>$50/hr</h3>
+                <h3>$40/hr</h3>
                 <ul>
                     <li>Studio in downtown Santa Ana</li>
                 </ul>
