--- a/beats.html
+++ b/beats.html
@@ -4,7 +4,7 @@ title: Beats & Services
 ---
 
 <h1>Services</h1>
-<h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a></h3>
+<h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="https://instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
 <div class="container pricing-table">
     <div class="row">
         <div class="col-md-4">
@@ -12,7 +12,7 @@ title: Beats & Services
                 <h4>Mixing</h4>
                 <h3>$100</h3>
                 <ul>
-                    <li>Make your vocals sexy</li>
+                    <li>Vocals mixed over a backing intrumental beat</li>
                 </ul>
             </div>
         </div>
@@ -21,16 +21,17 @@ title: Beats & Services
                 <h4>Mastering</h4>
                 <h3>$50</h3>
                 <ul>
-                    <li>Make it loud asf</li>
+                    <li>Make the track sound great on any sound system it's played on</li>
                 </ul>
             </div>
         </div>
         <div class="col-md-4">
             <div class="card">
                 <h4>Recording</h4>
-                <h3>$40/hr</h3>
+                <h3>$50/hr</h3>
                 <ul>
-                    <li>Studio in downtown Santa Ana</li>
+                    <li>Studio in downtown Santa Ana with engineer</li>
+                    <li>Rough Mix + Mastering also included</li>
                 </ul>
             </div>
         </div>
@@ -89,7 +90,7 @@ title: Beats & Services
     </div>
 </div>
 <div>
-    <h3>For exclusives and/or custom beats, contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a></h3>
+    <h3>For exclusives and/or custom beats, contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="https://instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
 </div>
 </div>
 <iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
