--- a/exclusives.html
+++ b/exclusives.html
@@ -17,7 +17,7 @@ title: Exclusive Pricing
                     <li>Entitled to 50% streaming royalties</li>
                     <li>Tag in intro</li>
                     <li>Credit in backend/title (prod. By Jake Plus)</li>
-                    <li><b>Free vocal mix included</b></li>
+                    <li><b>Free mixing included</b></li>
                 </ul>
             </div>
         </div>
