fix: insta link

--- a/beats.html
+++ b/beats.html
@@ -4,7 +4,7 @@ title: Beats & Services
 ---
 
 <h1>Services</h1>
-<h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
+<h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
 <div class="container pricing-table">
     <div class="row">
         <div class="col-md-4">
@@ -90,7 +90,7 @@ title: Beats & Services
     </div>
 </div>
 <div>
-    <h3>For exclusives and/or custom beats, contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
+    <h3>For exclusives and/or custom beats, contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
 </div>
 </div>
 <iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
