--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <a class="button" href="https://fanlink.to/Know-Me">GONER x XANAKIN 'ICEKREAM!'</a>
+  <a class="button" href="https://fanlink.to/ICEKREAM">GONER x XANAKIN 'ICEKREAM!'</a>
   <a class="button" href="https://distrokid.com/hyperfollow/liltytanandjakeplus/can-you-2">LIL TYTAN - 'CAN YOU?'</a>
   <a class="button" href="/beats">SHOP BEATS/SERVICES</a>
 
