--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="home">
 
   <a class="button" href="https://distrokid.com/hyperfollow/molomboxjakeplus/heart-emoji">MOLOMBO - 'HEART EMOJI' 🧡</a>
-  <a class="button" href="https://fanlink.to/ICEKREAM">GONER x XANAKIN 'ICEKREAM!'</a>
+  <a class="button" href="https://distrokid.com/hyperfollow/gonerandjakeplus/icekream-feat-xanakin-skywok-2">GONER x XANAKIN 'ICEKREAM!'</a>
   <a class="button" href="/beats">SHOP BEATS/SERVICES</a>
 
 <!-- Begin Mailchimp Signup Form -->
