ud: recording info

--- a/beats.html
+++ b/beats.html
@@ -93,8 +93,7 @@ title: Beats & Services
                 <h4>Recording</h4>
                 <h3>$50/hr</h3>
                 <ul>
-                    <li>Studio in downtown Santa Ana with engineer</li>
-                    <li>Rough Mix + Mastering also included</li>
+                    <li>Professional studio engineer for hire (not including studio)</li>
                 </ul>
             </div>
         </div>
