fix: beat page scrollto link

--- a/beats.html
+++ b/beats.html
@@ -3,14 +3,14 @@ layout: page
 title: Beats & Services
 ---
 
-<h3 style="text-align: center;">Click <a href="#services">here</a> for more info on pricing & engineering services</h3>
+<h3 style="text-align: center;">Click <a href="#pricing">here</a> for more info on pricing & engineering services</h3>
 
 
 <iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
 
 
 <div style="text-align: center;">
-    <h1>Beats</h1>
+    <h1 id="pricing">Beats</h1>
     <div>
         <h3>Non-exclusive licenses. Buy one get one free all orders.</h3>
         <h4>discount is automatically applied when you add two items to cart. All sales are final.</h4>
@@ -66,7 +66,7 @@ title: Beats & Services
 
 <br>
 
-<h1 id="services">Services</h1>
+<h1>Services</h1>
 <h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
 <div class="container pricing-table">
     <div class="row">
