--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-  <a class="button" href="https://distrokid.com/hyperfollow/molomboxjakeplus/heart-emoji">MOLOMBO - 'HEART EMOJI' 🧡</a>
-  <a class="button" href="https://distrokid.com/hyperfollow/gonerandjakeplus/icekream-feat-xanakin-skywok-2">GONER x XANAKIN 'ICEKREAM!'</a>
+  <a class="button" href="https://youtu.be/SoANf01bHAo">JAKE PLUS - INTHENIGHT M/V</a>
+  <a class="button" href="https://youtu.be/M4_9--pDxC0">MOLOMBO - 'WONDERFUL GUY' M/V</a>
   <a class="button" href="/beats">SHOP BEATS/SERVICES</a>
 
 <!-- Begin Mailchimp Signup Form -->
