--- a/beats.html
+++ b/beats.html
@@ -3,7 +3,9 @@ layout: page
 title: Beats & Services
 ---
 
-<h3 style="text-align: center;">Click <a href="#pricing">here</a> for more info on pricing & engineering services</h3>
+<h3 style="text-align: center;">Beat pricing click <a href="#pricing">here</a></h3>
+<br>
+<h3 style="text-align: center;">Engineering pricing click <a href="#services">here</a></h3>
 
 
 <iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
@@ -23,7 +25,8 @@ title: Beats & Services
                     <h3>$29</h3>
                     <ul>
                         <li>MP3 File</li>
-                        <li>Not Available for Streaming Services with the exception of SoundCloud and YouTube</li>
+                        <li>1,000 Unit Cap</li>
+                        <li>20,000 Stream Cap</li>
                         <li>Must leave tag in intro</li>
                         <li>Must Credit In Title (Prod. by Jake Plus)</li>
                     </ul>
@@ -66,7 +69,7 @@ title: Beats & Services
 
 <br>
 
-<h1>Services</h1>
+<h1 id="services">Services</h1>
 <h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
 <div class="container pricing-table">
     <div class="row">
