ud beat page services

--- a/beats.html
+++ b/beats.html
@@ -4,7 +4,6 @@ title: Beats & Services
 ---
 
 <h3 style="text-align: center;">Beat pricing click <a href="#pricing">here</a></h3>
-<br>
 <h3 style="text-align: center;">Engineering pricing click <a href="#services">here</a></h3>
 
 
@@ -75,10 +74,20 @@ title: Beats & Services
     <div class="row">
         <div class="col-md-4">
             <div class="card">
-                <h4>Mixing</h4>
+                <h4>Vocal Mixing</h4>
                 <h3>$100</h3>
                 <ul>
                     <li>Vocals mixed over a backing intrumental beat</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Beat Mixing</h4>
+                <h3>$100</h3>
+                <ul>
+                    <li>Assess and balance each sound in the instrumental</li>
+                    <li>Requires track stems</li>
                 </ul>
             </div>
         </div>
