feat: homepage beatstore

--- a/index.html
+++ b/index.html
@@ -1,27 +1,113 @@
 ---
-layout: default
+layout: page
+title: Beats & Services
 ---
 
-<div class="home">
+<h3 style="text-align: center;">Beat pricing click <a href="#pricing">here</a></h3>
+<h3 style="text-align: center;">Engineering pricing click <a href="#services">here</a></h3>
 
-  <a class="button" href="https://youtu.be/SoANf01bHAo">JAKE PLUS - INTHENIGHT M/V</a>
-  <a class="button" href="https://youtu.be/M4_9--pDxC0">MOLOMBO - 'WONDERFUL GUY' M/V</a>
-  <a class="button" href="/beats">SHOP BEATS/SERVICES</a>
 
-<!-- Begin Mailchimp Signup Form -->
-<div id="mc_embed_signup">
-<form action="https://gmail.us20.list-manage.com/subscribe/post?u=674b0403b910566f079c93895&amp;id=44eabddc9a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<label for="mce-EMAIL">Join the club, yo</label>
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_674b0403b910566f079c93895_44eabddc9a" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+<iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
+
+
+<div style="text-align: center;">
+    <h1 id="pricing">Beats</h1>
+    <div>
+        <h3>Non-exclusive licenses. Buy one get one free all orders.</h3>
+        <h4>discount is automatically applied when you add two items to cart. All sales are final.</h4>
     </div>
-</form>
+    <div class="container pricing-table">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <h4>MP3 Lease</h4>
+                    <h3>$29</h3>
+                    <ul>
+                        <li>MP3 File</li>
+                        <li>1,000 Unit Cap</li>
+                        <li>20,000 Stream Cap</li>
+                        <li>Must leave tag in intro</li>
+                        <li>Must Credit In Title (Prod. by Jake Plus)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <h4>WAV Lease</h4>
+                    <h3>$49</h3>
+                    <ul>
+                        <li>MP3 File</li>
+                        <li>WAV File</li>
+                        <li>2,500 Unit Cap</li>
+                        <li>50,000 Stream Cap</li>
+                        <li>Must leave tag in intro</li>
+                        <li>Must Credit In Title (Prod. by Jake Plus)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <h4>Unlimited lease</h4>
+                    <h3>$199</h3>
+                    <ul>
+                        <li>MP3 File</li>
+                        <li>WAV File</li>
+                        <li>Unlimited Unit Cap</li>
+                        <li>Unlimited Stream Cap</li>
+                        <li>Must leave tag in intro</li>
+                        <li>Must Credit In Title (Prod. by Jake Plus)</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div>
+        <h3>For exclusives and/or custom beats, contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
+    </div>
 </div>
 
-<!--End mc_embed_signup-->
-  
+<br>
 
+<h1 id="services">Services</h1>
+<h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
+<div class="container pricing-table">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Vocal Mixing</h4>
+                <h3>$100</h3>
+                <ul>
+                    <li>Vocals mixed over a backing intrumental beat</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Beat Mixing</h4>
+                <h3>$100</h3>
+                <ul>
+                    <li>Assess and balance each sound in the instrumental</li>
+                    <li>Requires track stems</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Mastering</h4>
+                <h3>$50</h3>
+                <ul>
+                    <li>Make the track sound great on any sound system it's played on</li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+                <h4>Recording</h4>
+                <h3>$50/hr</h3>
+                <ul>
+                    <li>Professional studio engineer for hire (not including studio)</li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </div>
