--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Beats & Services
 <div style="text-align: center;">
     <h1 id="pricing">Beats</h1>
     <div>
-        <h3>Non-exclusive licenses. Buy one get one free all orders.</h3>
+        <h3>Non-exclusive licenses. <b>Buy one get one free</b> all orders.</h3>
         <h4>discount is automatically applied when you add two items to cart. All sales are final.</h4>
     </div>
     <div class="container pricing-table">
