fix: homepage content

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: page
 title: Beats & Services
 ---
 
-<h3 style="text-align: center;">Beat pricing click <a href="#pricing">here</a></h3>
+<h3 style="text-align: center;">Beat pricing info click <a href="#pricing">here</a></h3>
 <h3 style="text-align: center;">Engineering pricing click <a href="#services">here</a></h3>
 
 
@@ -62,14 +62,14 @@ title: Beats & Services
         </div>
     </div>
     <div>
-        <h3>For exclusives and/or custom beats, contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
+        <h3>For exclusives and/or custom beats, contact <a href="mailto:jakeplusbeats@gmail.com">jakeplusbeats@gmail.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
     </div>
 </div>
 
 <br>
 
 <h1 id="services">Services</h1>
-<h3 style="text-align: center;">Contact <a href="mailto:Jake@JakePlus.com">Jake@JakePlus.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
+<h3 style="text-align: center;">Contact <a href="mailto:jakeplusbeats@gmail.com">jakeplusbeats@gmail.com</a> or DM on insta <a href="http://www.instragram.com/jakeplusbeats">@jakeplusbeats</a></h3>
 <div class="container pricing-table">
     <div class="row">
         <div class="col-md-4">
