--- a/index.html
+++ b/index.html
@@ -102,10 +102,11 @@ title: Beats & Services
         </div>
         <div class="col-md-4">
             <div class="card">
-                <h4>Recording</h4>
+                <h4>Engineering</h4>
                 <h3>$50/hr</h3>
                 <ul>
-                    <li>Professional studio engineer for hire (not including studio)</li>
+                    <li>Recording (not including studio)</li>
+                    <li>Editing</li>
                 </ul>
             </div>
         </div>
