feat: update homepage pricing and buttons

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@ layout: page
 title: Beats & Services
 ---
 
-<h3 style="text-align: center;">Beat pricing info click <a href="#pricing">here</a></h3>
-<h3 style="text-align: center;">Engineering pricing click <a href="#services">here</a></h3>
-
+<div style="text-align: center;">
+    <a href="#pricing" class="button">Beat pricing info click here</a>
+    <a href="#services" class="button">Engineering pricing click here</a>
+    <h4 style="text-align: center;"><b>Buy one get one free</b> all orders.</h4>
+</div>
 
 <iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
 
@@ -13,33 +15,19 @@ title: Beats & Services
 <div style="text-align: center;">
     <h1 id="pricing">Beats</h1>
     <div>
-        <h3>Non-exclusive licenses. <b>Buy one get one free</b> all orders.</h3>
         <h4>discount is automatically applied when you add two items to cart. All sales are final.</h4>
     </div>
     <div class="container pricing-table">
         <div class="row">
             <div class="col-md-4">
                 <div class="card">
-                    <h4>MP3 Lease</h4>
-                    <h3>$29</h3>
-                    <ul>
-                        <li>MP3 File</li>
-                        <li>1,000 Unit Cap</li>
-                        <li>20,000 Stream Cap</li>
-                        <li>Must leave tag in intro</li>
-                        <li>Must Credit In Title (Prod. by Jake Plus)</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
                     <h4>WAV Lease</h4>
-                    <h3>$49</h3>
+                    <h3>$39</h3>
                     <ul>
                         <li>MP3 File</li>
                         <li>WAV File</li>
                         <li>2,500 Unit Cap</li>
-                        <li>50,000 Stream Cap</li>
+                        <li>100,000 Stream Cap</li>
                         <li>Must leave tag in intro</li>
                         <li>Must Credit In Title (Prod. by Jake Plus)</li>
                     </ul>
@@ -56,6 +44,19 @@ title: Beats & Services
                         <li>Unlimited Stream Cap</li>
                         <li>Must leave tag in intro</li>
                         <li>Must Credit In Title (Prod. by Jake Plus)</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <h4>Exclusive</h4>
+                    <h3>Offers only</h3>
+                    <ul>
+                        <li>MP3 File</li>
+                        <li>WAV File</li>
+                        <li>Track stems</li>
+                        <li>Unlimited Unit/stream Cap</li>
+                        <li>Tag optional</li>
                     </ul>
                 </div>
             </div>
