--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Beats & Services
     <a href="#pricing" class="button">Beat pricing info click here</a>
     <a href="#services" class="button">Engineering pricing click here</a>
     <h2 style="text-align: center;"><b>Buy one get one free</b> all orders.</h2>
-    <h4>discount is automatically applied when you add two items to cart. All sales are final.</h4>
+    <h4>discount is automatically applied when you add two items to cart</h4>
 </div>
 
 <iframe src="https://player.beatstars.com/?storeId=115837" width="100%" height="800" style="max-width:100%;"> -- none -- </iframe>
