feat: update beat sale info

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ title: Beats & Services
                         <li>WAV File</li>
                         <li>2,500 Unit Cap</li>
                         <li>100,000 Stream Cap</li>
+                        <li>No content ID</li>
                         <li>Must leave tag in intro</li>
                         <li>Must Credit In Title (Prod. by Jake Plus)</li>
                     </ul>
@@ -40,6 +41,7 @@ title: Beats & Services
                         <li>WAV File</li>
                         <li>Unlimited Unit Cap</li>
                         <li>Unlimited Stream Cap</li>
+                        <li>No content ID</li>
                         <li>Must leave tag in intro</li>
                         <li>Must Credit In Title (Prod. by Jake Plus)</li>
                     </ul>
@@ -54,6 +56,7 @@ title: Beats & Services
                         <li>WAV File</li>
                         <li>Track stems</li>
                         <li>Unlimited Unit/stream Cap</li>
+                        <li>Content ID allowed</li>
                         <li>Tag optional</li>
                     </ul>
                 </div>
