--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Beats & Services
             <div class="col-md-4">
                 <div class="card">
                     <h4>WAV Lease</h4>
-                    <h3>$39</h3>
+                    <span class="h3">$39 </span><span class="h4">for 2 beats</span>
                     <ul>
                         <li>MP3 File</li>
                         <li>WAV File</li>
@@ -35,7 +35,7 @@ title: Beats & Services
             <div class="col-md-4">
                 <div class="card">
                     <h4>Unlimited lease</h4>
-                    <h3>$199</h3>
+                    <span class="h3">$199 </span><span class="h4">for 2 beats</span>
                     <ul>
                         <li>MP3 File</li>
                         <li>WAV File</li>
