feat: design and damage LP

--- a/index-old.html
+++ b/index-old.html
@@ -1,12 +1,13 @@
 ---
 layout: default
+title: Stream Jake Plus - DAMAGE on all platforms
 ---
 
 <div class="home">
 
-  <a class="button" href="https://youtu.be/SoANf01bHAo">JAKE PLUS - INTHENIGHT M/V</a>
-  <a class="button" href="https://youtu.be/M4_9--pDxC0">MOLOMBO - 'WONDERFUL GUY' M/V</a>
-  <a class="button" href="/beats">SHOP BEATS/SERVICES</a>
+  <a class="button" href="https://music.apple.com/us/album/damage-single/1667708646?uo=4">Apple Music</a>
+  <a class="button" href="https://open.spotify.com/album/5cDG27v2IU5hC98JzcylQJ">Spotify</a>
+  <a class="button" href="https://soundcloud.com/jakeplus/damage">Soundcloud</a>
 
 <!-- Begin Mailchimp Signup Form -->
 <div id="mc_embed_signup">
