feat: button pixel events

--- a/damage.html
+++ b/damage.html
@@ -8,9 +8,9 @@ title: Stream Jake Plus - DAMAGE on all platforms
   <h1>DAMAGE</h1>
   <h2 class="text-center">by Jake Plus</h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/BWBoN8ZBhxc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-  <a class="button" target="_blank" href="https://music.apple.com/us/album/damage-single/1667708646?uo=4"><img src="../img/music-48.png">&nbsp;Apple Music</a>
-  <a class="button" target="_blank" href="https://open.spotify.com/album/5cDG27v2IU5hC98JzcylQJ"><img src="../img/spotify-48.png">&nbsp;Spotify</a>
-  <a class="button" target="_blank" href="https://soundcloud.com/jakeplus/damage"><img src="../img/soundcloud-48.png">&nbsp;Soundcloud</a>
+  <a onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickApple Music');" class="button" target="_blank" href="https://music.apple.com/us/album/damage-single/1667708646?uo=4"><img src="../img/music-48.png">&nbsp;Apple Music</a>
+  <a onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" class="button" target="_blank" href="https://open.spotify.com/album/5cDG27v2IU5hC98JzcylQJ"><img src="../img/spotify-48.png">&nbsp;Spotify</a>
+  <a onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSoundcloud');" class="button" target="_blank" href="https://soundcloud.com/jakeplus/damage"><img src="../img/soundcloud-48.png">&nbsp;Soundcloud</a>
 
   <!-- Begin Mailchimp Signup Form -->
   <div id="mc_embed_signup">
