--- a/holdon.html
+++ b/holdon.html
@@ -6,6 +6,7 @@ title: Stream Jake Plus - DAMAGE on all platforms
 <div class="home">
 
   <h1>HOLD ON</h1>
+  <img src="../img/HOLD_ON-cover-500.jpg" style="display:block;margin: 0 auto;width:250px;" />
   <h2 class="text-center">by Jake Plus</h2>
   <a onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickApple Music');" class="button" target="_blank" href="https://music.apple.com/us/album/hold-on/1675705803"><img src="../img/music-48.png">&nbsp;Apple Music</a>
   <a onclick="facebookTrackEvent('clickOut');facebookTrackEvent('clickSpotify');" class="button" target="_blank" href="https://open.spotify.com/album/1KlPbskJMMqyZZfNDoIpGT?si=kMT4XAGIRSa4lTYLssp1MA"><img src="../img/spotify-48.png">&nbsp;Spotify</a>
